Add absolute position

--- a/src/sass/layout/_choose.scss
+++ b/src/sass/layout/_choose.scss
@@ -1,4 +1,9 @@
+.choose {
+  position: absolute;
+  bottom: -11%;
+}
 .choose-title {
+  padding-right: 100px;
   margin-bottom: 30px;
   font-family: Montserrat;
   font-style: normal;
@@ -11,8 +16,8 @@
 .choose-conteiner {
   counter-reset: section;
   width: 280px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 30px;
+  padding-bottom: 25px;
   padding-left: 30px;
   padding-right: 14px;
   background: #ffffff;
@@ -53,10 +58,14 @@
 
 @media screen and (max-width: 767px) {
   .choose-list-item:not(:last-child) {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1343px) {
+  .choose {
+    bottom: -20%;
+    width: 100%;
+  }
   .choose-title {
     text-align: center;
     font-size: 26px;
@@ -64,10 +73,10 @@
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1243px) {
+@media screen and (min-width: 768px) and (max-width: 1343px) {
   .choose-conteiner {
     width: 688px;
-    padding-top: 30px;
+    padding-top: 40px;
     padding-bottom: 30px;
     padding-left: 98px;
     padding-right: 118px;
@@ -81,14 +90,18 @@
   .choose-list-item:nth-child(-n + 4) {
     margin-bottom: 30px;
   }
-  .choose-list-item:not(:last-child) {
-    margin-bottom: 30px;
-  }
+  // .choose-list-item:not(:last-child) {
+  //   margin-bottom: 40px;
+  // }
   .choose-list-item {
     flex-basis: calc(100% / 2 - 20px);
   }
 }
 @media screen and (min-width: 1344px) {
+  .choose {
+    bottom: -14%;
+    width: 100%;
+  }
   .choose-title {
     display: none;
   }
@@ -110,6 +123,6 @@
     flex-basis: calc(100% / 3 - 20px);
   }
   .choose-list-item:nth-child(-n + 3) {
-    margin-bottom: 32px;
+    margin-bottom: 40px;
   }
 }
