--- a/src/sass/layout/_programs.scss
+++ b/src/sass/layout/_programs.scss
@@ -1,12 +1,13 @@
 .programs {
+  position: relative;
   margin-top: 50px;
-  padding-bottom: 50px;
+  padding-bottom: 537px;
   background-color: var(--title-text-color);
 
   background-image: url(../images/program/lesson-mobile.png);
   background-repeat: no-repeat;
   background-size: 120px 137px;
-  background-position: bottom right;
+  background-position: 100% 77%;
 }
 @media screen and (min-device-pixel-ratio: 2),
   screen and (min-resolution: 192dpi),
@@ -109,7 +110,11 @@
 }
 
 @media screen and (min-width: 768px) {
+  .programs {
+    padding-bottom: 385px;
+  }
   .programs-title {
+    padding-left: 40px;
     padding-top: 60px;
     padding-bottom: 52px;
 
@@ -155,6 +160,7 @@
   }
   .programs {
     background-image: url(../images/program/lesson-tablet.png);
+    background-position: 100% 80%;
     background-size: 384px 280px;
   }
   @media screen and (min-device-pixel-ratio: 2),
@@ -189,6 +195,9 @@
     &::before {
       display: none;
     }
+  }
+  .programs-list-item {
+    width: 240px;
   }
   .programs-list-item:not(:last-child) {
     margin-right: 30px;
@@ -235,7 +244,7 @@
   }
   .programs {
     background-image: url(../images/program/lesson.png);
-    background-position: bottom left;
+    background-position: 0% 87%;
     background-size: 672px 502px;
   }
   @media screen and (min-device-pixel-ratio: 2),
