--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,7 +12,7 @@
 @import './layout/description';
 @import './layout/choose';
 @import './layout/programs';
-@import "./layout/feedback";
+@import './layout/feedback';
 // ==============BASE==============
 @import './base/common';
 @import './base/container';
@@ -24,6 +24,6 @@
 @import './utils/variables';
 @import './base/container';
 
-@import './guarantee';
-@import './teacher';
+@import './layout/teacher';
+@import './layout/guarantee';
 @import './layout/footer';
