--- a/src/partials/programs.html
+++ b/src/partials/programs.html
@@ -1,6 +1,6 @@
 <section class="programs">
     <h2 class="programs-title">Наша программа</h2>
-    <div class="programs-container">
+    <div class="programs-container container">
         <div class="programs-list-wrapper">
         <ul class="programs-list">
             <li class="programs-list-item"><h3 class="programs-list-subtitle">1 семестр</h3>
