--- a/src/sass/layout/_programs.scss
+++ b/src/sass/layout/_programs.scss
@@ -179,6 +179,9 @@
   }
 }
 @media screen and (min-width: 1344px) {
+  .programs {
+    margin-top: 130px;
+  }
   .programs-container.container {
     padding-left: 0;
     padding-right: 0;
