вставила волну, но не правильно

--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,42 +1,79 @@
 .hero__section {
-  // position: relative;
+  position: relative;
   // @media screen and (min-width: 1344px) {
   // background-image: url('../images/icons/icons-sprite.svg#iconVector-1');
   // background-position: bottom;
   // width: 100%;
-  margin-top: 46px;
-}
-.address__icon {
-  position: absolute;
-  // opacity: 0;
-  // width: 1688.5px;
-  background-position: bottom;
-  // width: 100%;
-  background-repeat: no-repeat;
-  background-size: contain;
-  width: 100vw;
-  height: 878px;
-  // position: absolute;
-  filter: drop-shadow(-5px 21px 26px rgba(0, 0, 0, 0.04));
-  -webkit-filter: drop-shadow(-5px 21px 26px rgba(0, 0, 0, 0.04));
-  left: 0;
-  right: 0;
-  fill: #ffff;
-  // fill: green;
+  // margin-top: 46px;
+  padding-top: 50px;
+  padding-bottom: 54px;
+  // @media screen and (min-width: 768px) {
+  //   padding-top: 70px;
+  //   padding-bottom: 76px;
+  // }
+  // @media screen and (min-width: 1344px) {
+  //   // max-width: 100%;
+  //   padding-bottom: 106px;
+  // }
+  //  position: relative;
+  // @media screen and (max-width: 767px) {
+  // }
+  background-position: 0 0;
+  background-size: 100vw;
+  // background-repeat: no-repeat;
+  // -webkit-filter: drop-shadow(8px 8px 8px #000);
+  // filter: drop-shadow(8px 8px 8px #000);
+  background-image: url('../images/wave/wave-desc-min.png');
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    background-image: url('../images/wave/wave-desc@2x-min.png');
+
+    background-image: url('../images/wave/wave-min.png');
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url('../images/wave/wave@2x-min.png');
+      // background-position: absolute;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    padding-top: 70px;
+    padding-bottom: 76px;
+    background-image: url('../images/wave/wave-tablet-min.png');
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url('../images/wave/wave-tablet@2x-min.png');
+      // }
+    }
+    @media screen and (min-width: 1344px) {
+      padding-bottom: 106px;
+      background-image: url('../images/wave/wave-desc-min.png');
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: url('../images/wave/wave-desc@2x-min.png');
+      }
+    }
+  }
 }
 
 .hero.container {
-  margin-bottom: 77px;
+  // margin-bottom: 77px;
   @media screen and (min-width: 768px) {
     display: flex;
   }
   @media screen and (min-width: 1344px) {
     // max-width: 100%;
-    margin-bottom: 96px;
   }
   // padding-bottom: 77px;
 }
 .hero__details {
+  @media screen and (max-width: 76px) {
+    display: flex;
+    flex-direction: column;
+  }
   @media screen and (min-width: 768px) {
     width: 332px;
   }
@@ -57,6 +94,7 @@
   margin-bottom: 30px;
   @media screen and (min-width: 768px) {
     @include font(800, 26px, 1.3);
+    display: inline-block;
   }
   @media screen and (min-width: 1344px) {
     @include font(800, 58px, 1.3);
@@ -81,11 +119,11 @@
     color: var(--accent-color);
     white-space: nowrap;
   }
-  // @media screen and (min-width: 1344px) {
 
-  margin-bottom: 40px;
-  @include font(500, 20px, 1.6);
-  // }
+  @media screen and (min-width: 1344px) {
+    margin-bottom: 40px;
+    @include font(500, 20px, 1.6);
+  }
 }
 
 .hero-button {
@@ -112,14 +150,6 @@
     min-width: 354px;
     height: 70px;
   }
-  &:hover .hero__link,
-  &:focus .hero__link {
-    color: var(--accent-color);
-    // @include font(bold, 14px, 1.214);
-    // @include font(bold, 16px, 1.214);
-    // font-size: 20px;
-    // line-height: 1.649;
-  }
 }
 .hero__link {
   font-style: normal;
@@ -132,30 +162,112 @@
   @media screen and (min-width: 1344px) {
     @include font(bold, 14px, 1.214);
   }
+  .hero-button:hover &,
+  .hero-button:focus & {
+    color: var(--accent-color);
+    // @include font(bold, 14px, 1.214);
+    // @include font(bold, 16px, 1.214);
+    // font-size: 20px;
+    // line-height: 1.649;
+  }
 }
 .hero__picture {
   // z-index: 1;
   margin-right: auto;
   margin-left: auto;
-  // width: 208px;
-  // height: 177.5px;
+  width: 208px;
+  height: 177.5px;
   @media screen and (min-width: 768px) {
-    // width: 375.75px;
-    // height: 320.64px;
+    margin-top: 13px;
+    // margin-right: -60px;
+    width: 375.75px;
+    height: 320.64px;
   }
   @media screen and (min-width: 1344px) {
-    margin-right: -183px;
-    // margin-right: -130px;
-    // padding-right: 54px;
-    padding-right: 5px;
+    // margin-right: -172px;
+
     width: 841.55px;
     height: 718.14px;
-    // margin-right: auto;
-    // position: absolute;
-    // top: 0;
-    // right: 46px;
-    // right: 49px;
+  }
+}
+.hero__img {
+  width: 208px;
+  height: 177.5px;
+  margin-right: auto;
+  margin-left: auto;
+  @media screen and (min-width: 768px) {
+    width: 375.75px;
+    height: 320.64px;
+  }
+  @media screen and (min-width: 1344px) {
+    width: 841.55px;
+    height: 718.14px;
   }
 }
 // @media screen and (min-width: 1344px) {
+// }
+
+// .page {
+//   // -webkit-filter: drop-shadow(8px 8px 8px #000);
+//   // filter: drop-shadow(8px 8px 8px #000);
+//   // filter: drop-shadow(-5px 21px 26px rgba(0, 0, 0, 0.04));
+//   // -webkit-filter: drop-shadow(-5px 21px 26px rgba(0, 0, 0, 0.04));
+//   position: relative;
+//   @media screen and (max-width: 767px) {
+//   }
+//   background-size: 100vw;
+//   background-repeat: no-repeat;
+//   -webkit-filter: drop-shadow(8px 8px 8px #000);
+//   filter: drop-shadow(8px 8px 8px #000);
+//   background-image: url('../images/wave/wave-desc-min.png');
+//   @media screen and (min-device-pixel-ratio: 2),
+//     screen and (min-resolution: 192dpi),
+//     screen and (min-resolution: 2dppx) {
+//     background-image: url('../images/wave/wave-desc@2x-min.png');
+
+//     background-image: url('../images/wave/wave-min.png');
+//     @media screen and (min-device-pixel-ratio: 2),
+//       screen and (min-resolution: 192dpi),
+//       screen and (min-resolution: 2dppx) {
+//       background-image: url('../images/wave/wave@2x-min.png');
+//       // background-position: absolute;
+//     }
+//   }
+//   @media screen and (min-width: 768px) {
+//     object-fit: fill(cover);
+//     background-image: url('../images/wave/wave-tablet-min.png');
+//     @media screen and (min-device-pixel-ratio: 2),
+//       screen and (min-resolution: 192dpi),
+//       screen and (min-resolution: 2dppx) {
+//       background-image: url('../images/wave/wave-tablet@2x-min.png');
+//       // }
+//     }
+//     @media screen and (min-width: 1344px) {
+//       background-image: url('../images/wave/wave-desc-min.png');
+//       @media screen and (min-device-pixel-ratio: 2),
+//         screen and (min-resolution: 192dpi),
+//         screen and (min-resolution: 2dppx) {
+//         background-image: url('../images/wave/wave-desc@2x-min.png');
+//       }
+//     }
+//   }
+// }
+
+// .body {
+//   position: absolute;
+//   // opacity: 0;
+//   // width: 1688.5px;
+//   background-position: bottom;
+//   // width: 100%;
+//   background-repeat: no-repeat;
+//   background-size: contain;
+//   width: 100vw;
+//   height: 878px;
+//   // position: absolute;
+//   filter: drop-shadow(-5px 21px 26px rgba(0, 0, 0, 0.04));
+//   -webkit-filter: drop-shadow(-5px 21px 26px rgba(0, 0, 0, 0.04));
+//   left: 0;
+//   right: 0;
+//   fill: #ffff;
+//   // fill: green;
 // }
