--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,35 +1,25 @@
- 
-    <!-- <svg class="address__icon">
-        <use href="images/icons/icons-sprite.svg#iconVector-1"></use>
-    </svg> -->
-<!-- width="1688.5px" height="878px" -->
-<!-- width="1688.5px" height="878px" -->
- <section class="hero__section">
-                <svg class="address__icon">
-                    <use href="images/icons/icons-sprite.svg#iconVector-1"></use>
-                </svg>
-     <div class="hero container">
-<div class="hero__details">
-         <h1 class="hero__tittle">Комплексная подготовка к ВНО
-             по английскому языку</h1>
-<h2 class="hero__text"> <span class="hero__text hard">Просто не будет.<br></span>
-    <span class="hero__text promise">Но ты гарантировано наберешь</span>
-    <span class="hero__text score">+25 баллов</span>
-</h2>
-<button class="hero-button" type="button" data-modal-open><a class="hero__link" href="#registration">хочу на бесплатное занятие</a></button>
-</div>
-<picture class="hero__picture">
-            <source srcset="images/hero/h-mobile-1.jpg 1x, images/hero/h-mobile@2x.jpg 2x" media="(max-width: 767px)">
-            <source srcset="images/hero/h-tablet-1.jpg 1x, images/hero/h-tablet@2x.jpg 2x" media="(max-width: 1343px)">
-            <source srcset="images/hero/h-desktop-1.jpg 1x, images/hero/h-desktop@2x.jpg 2x" media="(min-width: 1344px)">
-            <!-- <source srcset="images/hero/ellipse1.png 1x, images/hero/ellipse1@2x.png 2x" media="(min-width: 1344px)">
-                <source srcset="images/hero/ellipse2.png 1x, images/hero/ellipse2@2x.png 2x" media="(min-width: 1344px)"> -->
-             <!-- <source srcset="images/hero/ellipse2.png 1x, images/hero/ellipse2@2x.png 2x" media="(min-width: 1344px)"> -->
-            <img class="hero__img" src="images/hero/h-desktop-1.jpg" alt="люди разговаривают"> 
+<section class="hero__section">
+    <div class="hero container">
+        <div class="hero__details">
+            <h1 class="hero__tittle">Комплексная подготовка к ВНО
+                по английскому языку</h1>
+            <h2 class="hero__text"> <span class="hero__text hard">Просто не будет.<br></span>
+                <span class="hero__text promise">Но ты гарантировано наберешь</span>
+                <span class="hero__text score">+25 баллов</span>
+            </h2>
+            <button class="hero-button" type="button" data-modal-open><a class="hero__link" href="#registration">хочу на
+                    бесплатное занятие</a></button>
+        </div>
+        <picture class="hero__picture">
+            <source srcset="images/hero/group-mob-min.png 1x, images/hero/group-mob@2x-min.png 2x"
+                media="(max-width: 767px)">
+            <source srcset="images/hero/group-tablet-min.png 1x, images/hero/group-tablet@2x-min.png 2x"
+                media="(max-width: 1343px)">
+            <source srcset="images/hero/group-desc-min.png 1x, images/hero/group-desc@2x-min.png 2x"
+                media="(min-width: 1344px)">
+            <img class="hero__img" src="images/hero/h-desktop-1.jpg" alt="люди разговаривают">
         </picture>
-            <!-- <svg class="address__icon" width="1688.5px" height="878px">
-                <use href="images/icons/icons-sprite.svg#iconVector-1"></use>
-            </svg> -->
-</div>
+    </div>
+    <!-- <div class="hero_wave"></div> -->
 
-    </section>
+</section>
