--- a/src/sass/components/_modal-btn.scss
+++ b/src/sass/components/_modal-btn.scss
@@ -3,8 +3,11 @@
   margin: 0;
   padding: 10px;
   min-height: 48px;
+  min-width: 260px;
 
   border: 0;
+
+  cursor: pointer;
 
   @include font(12px, 700, 15px);
   letter-spacing: 0.08em;
@@ -15,6 +18,7 @@
 
   @media screen and (min-width: 1344px) {
     min-height: 70px;
+    min-width: 354px;
     @include font(14px, 700, 17px);
     letter-spacing: 0.14em;
   }
