--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -24,5 +24,8 @@
 
 @import './components/body';
 @import './components/modal-btn';
+@import './components/backdrop';
+@import './components/modal-window';
+@import './components/modal-form';
 
 
