--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -7,7 +7,7 @@
       Но ты гарантировано наберешь
       <span class="hero-text-accent">+25 баллов</span>
     </p>
-    <button class="modal-btn" type="button">хочу на бесплатное занятие</button>
+    <button class="modal-btn" type="button" data-modal-open>хочу на бесплатное занятие</button>
 
     <ul class="advantages-list">
       <li class="advantages-item">
