--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,9 +1,10 @@
-:root{
-    --primaty-text-color: #3D3D3D;
-    --secondary-text-color: #B9B9B9 ;
-    --title-text-color: #111518;
-    --accent-color: #FF6B09;
-    --primary-white-color: #ffffff;
-    --primary-background-color: #ffffff;
-}
+:root {
+  --primaty-text-color: #3d3d3d;
+  --secondary-text-color: #b9b9b9;
+  --title-text-color: #111518;
+  --accent-color: #ff6b09;
+  --primary-white-color: #ffffff;
+  --primary-background-color: #ffffff;
 
+  --cubic: cubic-bezier(0.4, 0, 0.2, 1);
+}
