--- a/src/sass/components/_problems.scss
+++ b/src/sass/components/_problems.scss
@@ -110,10 +110,10 @@
 // Destop
 
 @media screen and (min-width: 1344px) {
-  h2 {
-    animation: pulse;
-    animation-duration: 2s;
-  }
+  // h2 {
+  //   animation: pulse;
+  //   animation-duration: 2s;
+  // }
   .problems {
     padding-top: 100px;
     height: 560px;
