--- a/src/sass/components/_program.scss
+++ b/src/sass/components/_program.scss
@@ -3,7 +3,7 @@
   overflow: hidden;
   @media screen and (min-width: 320px) {
     padding-top: 50px;
-    padding-bottom: 537px;
+    padding-bottom: 480px;
   }
 
   @media screen and (min-width: 768px) {
@@ -11,8 +11,8 @@
     padding-bottom: 50px;
   }
   @media screen and (min-width: 1344px) {
+    height: 1237px;
     padding-top: 120px;
-    padding-bottom: 363px;
     position: relative;
     max-width: 1680px;
     margin: 0 auto;
