--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,5 +1,5 @@
 .hero__section {
-  position: relative;
+  // position: relative;
   // @media screen and (min-width: 1344px) {
   // background-image: url('../images/icons/icons-sprite.svg#iconVector-1');
   // background-position: bottom;
@@ -20,24 +20,26 @@
   // }
   background-position: 0 0;
   background-size: 100vw;
-  // background-repeat: no-repeat;
-  // -webkit-filter: drop-shadow(8px 8px 8px #000);
-  // filter: drop-shadow(8px 8px 8px #000);
-  background-image: url('../images/wave/wave-desc-min.png');
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-    background-image: url('../images/wave/wave-desc@2x-min.png');
-
-    background-image: url('../images/wave/wave-min.png');
+  background-repeat: no-repeat;
+  -webkit-filter: drop-shadow(8px 8px 8px #000);
+  filter: drop-shadow(8px 8px 8px #000);
+  @media screen and (min-width: 300px) and (max-width: 767px) {
+    background-image: url('../images/wave/wave-desc-min.png');
     @media screen and (min-device-pixel-ratio: 2),
       screen and (min-resolution: 192dpi),
       screen and (min-resolution: 2dppx) {
-      background-image: url('../images/wave/wave@2x-min.png');
-      // background-position: absolute;
+      background-image: url('../images/wave/wave-desc@2x-min.png');
+
+      background-image: url('../images/wave/wave-min.png');
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: url('../images/wave/wave@2x-min.png');
+        // background-position: absolute;
+      }
     }
   }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1343px) {
     padding-top: 70px;
     padding-bottom: 76px;
     background-image: url('../images/wave/wave-tablet-min.png');
@@ -175,9 +177,11 @@
   // z-index: 1;
   margin-right: auto;
   margin-left: auto;
-  width: 208px;
-  height: 177.5px;
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 300px) and (max-width: 767px) {
+    width: 208px;
+    height: 177.5px;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1343px) {
     margin-top: 13px;
     // margin-right: -60px;
     width: 375.75px;
@@ -191,11 +195,14 @@
   }
 }
 .hero__img {
-  width: 208px;
-  height: 177.5px;
   margin-right: auto;
   margin-left: auto;
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 300px) and (max-width: 767px) {
+    width: 208px;
+    height: 177.5px;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 768px) {
     width: 375.75px;
     height: 320.64px;
   }
