додано клас section

--- a/src/partials/section-teacher.html
+++ b/src/partials/section-teacher.html
@@ -1,5 +1,5 @@
 <!--Преподаватель-->
-<section class="teacher">
+<section class="teacher section">
   <div class="container">
     <h2 class="subtitle">Преподаватель</h2>
     <div class="teacher-container">
@@ -88,9 +88,10 @@
               Art of Teaching (GEMS education), Powerful Tools for Teaching and
               Learning (University of Houston).
             </p>
-             </div>
-            <a class="teacher-link" href="#"
-              >Cambrige English Entry Level Certificate</a>
+          </div>
+          <a class="teacher-link" href="#"
+            >Cambrige English Entry Level Certificate</a
+          >
         </div>
       </div>
     </div>
@@ -98,9 +99,9 @@
 </section>
 <!--Мы гарантируем-->
 
-<section class="guarantee">
+<section class="guarantee section">
   <h2 class="subtitle">Мы гарантируем</h2>
-    <div class="container">
+  <div class="container">
     <div class="guarantee-container-list">
       <ul class="guarantee-list list">
         <li class="guarantee-list-item">
