сделал отступы на моб версии по вчерашним замечаниям

--- a/src/sass/layout/_clients.scss
+++ b/src/sass/layout/_clients.scss
@@ -18,6 +18,10 @@
 .clients__top-part {
   box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
 }
+.clients__right-side {
+  padding-left: 10px;
+  padding-right: 10px;
+}
 .clients__img {
   display: block;
   width: 90px;
@@ -136,7 +140,10 @@
   }
   .clients__right-side {
     width: 412px;
+    padding-left: 0;
+    padding-right: 0;
   }
+
   .clients__description {
     text-align: left;
     margin-bottom: 20px;
@@ -227,6 +234,6 @@
     width: 706px;
   }
   .clients__bottom-part {
-    margin-top: 0;
+    margin-top: 40px;
   }
 }
