правки по контейнеру

--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -1,12 +1,12 @@
 <section class="problem"> 
-    <div class="problem-section-container">
+    <div class="problem-section-container container">
         <h1 class="problem-title">Главные проблемы учеников 
             <br>на English ВНО,  которые </br> 
         мы 
         <span class="problem-title-item">помогаем</span> 
         решить</h1> 
 
-    <div class="problem-list-container">
+    <div class="problem-list-container container">
     <ul class="problem-list">
         <li class="problem-item list">
             <p class="problem-item-number">01</p>
