убрала марджин в проблемс , добавила паддинг в approach

--- a/src/sass/layout/_approach.scss
+++ b/src/sass/layout/_approach.scss
@@ -1,5 +1,5 @@
 .approach {
-  padding-top: 50px;
+  padding-top: 198px;
   padding-bottom: 50px;
 }
 
@@ -103,6 +103,9 @@
 }
 
 @media screen and (min-width: 768px) {
+  .approach {
+    padding-top: 200px;
+  }
   .approach-list {
     display: flex;
     flex-wrap: wrap;
@@ -136,7 +139,7 @@
 
 @media screen and (min-width: 1344px) {
   .approach {
-    padding-top: 130px;
+    padding-top: 280px;
     padding-bottom: 130px;
   }
   .approach-title {
