--- a/src/sass/components/reviews/_reviews.scss
+++ b/src/sass/components/reviews/_reviews.scss
@@ -87,7 +87,7 @@
 
 .slider {
   position: relative;
-  
+
   @media screen and (min-width: $tablet) {
     padding: 0px 50px;
   }
@@ -135,12 +135,14 @@
 }
 
 .slider .slick-dots {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .slider .slick-dots li {
+  width: 12px;
 }
 
 .slider .slick-dots button {
@@ -153,4 +155,9 @@
 
 .slider .slick-dots button::before {
   content: '';
+}
+
+.slider .slick-dots li.slick-active button {
+  border-radius: 0;
+  background-image: url('../images/reviews/house.svg');
 }
