--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,6 +1,6 @@
 
-<section class="container">
-    <div class="gallery carousel slide" id="carouselExampleCaptions" data-ride="carousel">
+<section class="gallery">
+    <div class="container carousel slide" id="carouselExampleCaptions" data-ride="carousel">
         <ul class="gallery-list carousel-inner">
             <li class="item carousel-item active">
                 
