--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -121,6 +121,10 @@
 }
 
 @media screen and (min-width: 1680px){
+    .footer-flex-container{
+        max-width: 1680px;
+    }
+
     .footer-flex-container{ 
         padding: 0px;
         margin-left: 150px;
