--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -3,6 +3,7 @@
     background-color: rgba(17, 21, 24, 1);
     background-repeat: no-repeat;
     background-size: cover;
+
 }
 
 @media screen and (min-device-pixel-ratio: 2)and (min-width: 768px),
@@ -137,6 +138,8 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px){
 }
 
 @media screen and (min-width: 768px){
+
+
     .form-title{
         font-size: 26px;
         line-height: 1.307;
@@ -205,6 +208,11 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px){
         line-height: 1.214px;
         width: 354px;
         height: 70px;
-        margin-left: 460px;
+        margin-left: 633px;
     }
+
+    .form-container{
+        max-width: 1680px;
+    }
+
  }
