--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -8,7 +8,7 @@
     <!-- вывести в отдельный блок -->
     <div class="dont-worry">
       <button class="btn appeal-one">
-        <span>Our Locations</span>
+        <span class="btn-font">Our Locations</span>
         <!-- <svg>
               <use href="./images/svg/sprite.svg#icon-arrow"></use>
             </svg> -->
