--- a/src/sass/components/_components.scss
+++ b/src/sass/components/_components.scss
@@ -76,7 +76,7 @@
     // размер всех кнопок меняется. паддинг 35-37px
   }
 
-  & span {
+  & .btn-font {
     font-weight: 700;
     font-size: 16px;
     line-height: 1.31;
@@ -104,4 +104,9 @@
 .appeal-two {
   background: #ffffff; //привязать к базовым цветам
   color: #d41443; //привязать к базовым цветам
+
+  &:hover,
+  &:focus {
+    background: #ecebeb; //привязать к базовым цветам
+  }
 }
