--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -47,7 +47,7 @@
   line-height: 1.15;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-  color: #ffffff; // привязать  основным стилям
+  color: #ffffff; // привязать к основным стилям
 
   @media screen and (min-width: 768px) {
     margin-top: 102px;
