--- a/src/sass/_ui.totop.scss
+++ b/src/sass/_ui.totop.scss
@@ -16,11 +16,11 @@
   height: 51px;
   border: none;
   text-indent: 100%;
-  background: url(../images/ui.totop.png) no-repeat left top;
+  background: url(../images/up.svg) no-repeat left top;
 }
 
 #toTopHover {
-  background: url(../images/ui.totop.png) no-repeat left -51px;
+  background: url(../images/up.svg) no-repeat left -51px;
   width: 51px;
   height: 51px;
   display: block;
