Обновил контейнер и спозицилнировал текст в герое

--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -75,6 +75,7 @@
 
   @include for-size(tablet) {
     height: 399px;
+    justify-content: space-between;
   }
 
   @include for-size(desktop) {
@@ -209,6 +210,10 @@
   @include for-size(mobile-only) {
     display: none;
   }
+
+  position: absolute;
+  bottom: 34px;
+  left: 120px;
 }
 
 .hero-text {
