update footer + container

--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,7 @@ li {
 
 @media screen and (min-width: 320px) {
   .container {
-    width: 320px;
+    max-width: 480px;
     padding: 0 20px;
   }
 }
@@ -565,6 +565,7 @@ section {
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .footer-title {
     width: 200px;
+    letter-spacing: 0.04em;
   }
 }
 
