--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -81,6 +81,7 @@
 
   @media screen and (min-width: 320px) and (max-width: 767px) {
     width: 200px;
+    letter-spacing: 0.04em;
   }
 
   @media screen and (min-width: 768px) and (max-width: 1199px) {
