--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -8,7 +8,7 @@
   }
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .container {
     max-width: 480px;
     padding: 0 20px;
