--- a/src/sass/layout/_description.scss
+++ b/src/sass/layout/_description.scss
@@ -1,7 +1,7 @@
 section {
   margin-left: auto;
   margin-right: auto;
-  max-width: 320px;
+  max-width: 480px;
 }
 @media screen and (min-width: 768px) {
   section {
@@ -261,19 +261,19 @@ section {
 .fact-title1::before {
   width: 33px;
   height: 50px;
-  background-image: url(../images/svg/icon-bucket-milk.png);
+  background-image: url(../images/icon/icon-bucket-milk.png);
 }
 
 .fact-title2::before {
   width: 50px;
   height: 50px;
-  background-image: url(../images/svg/icon-bucket-apple.png);
+  background-image: url(../images/icon/icon-bucket-apple.png);
 }
 
 .fact-title3::before {
   width: 44px;
   height: 50px;
-  background-image: url(../images/svg/icon-heart.png);
+  background-image: url(../images/icon/icon-heart.png);
 }
 
 .fact-text {
