--- a/css/main.css
+++ b/css/main.css
@@ -161,11 +161,6 @@ button {
   border-radius: 22px;
   /* сюда нужно проставить правильный класс 
   для всплывающего окна хедера*/
-  /*& svg {
-    width: 3.61px;
-    height: 100%;
-    stroke: #000000;
-  }*/
 }
 
 header .btn {
@@ -184,15 +179,17 @@ header .btn {
   }
 }
 
-.btn span {
+.btn .btn-font {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.31;
 }
 
-.btn span::after {
-  margin-left: 10px;
-  content: '>';
+.btn svg {
+  width: 3.6px;
+  height: 8px;
+  height: 100%;
+  stroke: #000000;
 }
 
 .appeal-one {
@@ -203,6 +200,10 @@ header .btn {
 .appeal-two {
   background: #ffffff;
   color: #d41443;
+}
+
+.appeal-two:hover, .appeal-two:focus {
+  background: #ecebeb;
 }
 
 .hero {
