--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -11,13 +11,23 @@
         <span class="btn-font">Our Locations</span>
         <!-- <svg>
               <use href="./images/svg/sprite.svg#icon-arrow"></use>
-            </svg> -->
+            </svg>-->
       </button>
       <button class="btn appeal-two">
-        Our Locations
-        <!-- <svg>
-              <use href="./images/svg/sprite.svg#icon-arrow"></use>
-            </svg> -->
+        <span class="btn-font">
+          Our Locations
+          <svg>
+            <use href="./images/svg/sprite.svg#icon-arrow"></use>
+          </svg>
+        </span>
+      </button>
+      <button class="btn appeal-two">
+        <span class="btn-font">
+          Our Locations
+          <svg>
+            <use href="./images/svg/sprite.svg#icon-arrow-right"></use>
+          </svg>
+        </span>
       </button>
     </div>
     <!-- вывести в отдельный блок -->
