--- a/src/sass/components/_components.scss
+++ b/src/sass/components/_components.scss
@@ -80,19 +80,14 @@
     font-weight: 700;
     font-size: 16px;
     line-height: 1.31;
-
-    &::after {
-      margin-left: 10px;
-      content: '>';
-    }
   }
 
-  // ">" - это явно не рисунок
-  /*& svg {
-    width: 3.61px;
+  & svg {
+    width: 3.6px;
+    height: 8px;
     height: 100%;
     stroke: #000000;
-  }*/
+  }
 }
 
 //классы цветов
