Изменен шрифт абазацов под таблет и десктоп

--- a/src/sass/layouts/_manufacture.scss
+++ b/src/sass/layouts/_manufacture.scss
@@ -29,6 +29,14 @@
   padding-left: (51px -20px);
   padding-right: (51px -20px);
   margin-bottom: 47px;
+  @include for-size(tablet) {
+    font-size: 14px;
+    line-height: 1.76;
+  }
+  @include for-size(desktop) {
+    font-size: 16px;
+    line-height: 1.76;
+  }
 }
 .secondary-text-manufacture {
   font-family: 'DM Sans' sans-serif;
@@ -50,7 +58,13 @@
       background-image: url('../images/manufacture/sectionbg1-mobile@2x.png');
     }
   }
+  @include for-size(tablet) {
+    font-size: 14px;
+    line-height: 1.76;
+  }
   @include for-size(desktop) {
+    font-size: 14px;
+    line-height: 1.94;
     background-image: url('../images/manufacture/sectionbg1-desktop.png');
     @media screen and (min-device-pixel-ratio: 2),
       screen and (min-resolution: 192dpi),
