--- a/src/partials/guarantee.html
+++ b/src/partials/guarantee.html
@@ -1,36 +1,48 @@
 <section class="garantee">
   <div class="container mobile">
     <h6 class="title-garantee">Мы гарантируем</h6>
-    <div class="garantee-block">
+    <ul class="garantee-block">
+      
+      <li class="garantee-item">
       <p class="garantee-description">
         <svg class="icon-fire" width="15px" height="20px" data-modal-close>
-          <use href="./images/sprite.svg#icon-fire"></use></svg
-        >Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном
-        тестировании. Иначе мы вернем деньги.<span class="garantee-accent"
-          >*</span
-        >
+          <use href="./images/sprite.svg#icon-fire"></use>
+        </svg>
+           Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном
+           тестировании. Иначе мы вернем деньги.<span class="garantee-accent">*</span>
       </p>
+      
+
+      <li class="garantee-item">
       <p class="garantee-description">
         <svg class="icon-fire" width="15px" height="20px" data-modal-close>
-          <use href="./images/sprite.svg#icon-fire"></use></svg
-        >Ты научишься писать сочинения минимум на 10 баллов из 14.<span
-          class="garantee-accent"
-        >
-          В то время как 20% учеников получили за сочинение 0.</span
-        >
+          <use href="./images/sprite.svg#icon-fire"></use>
+        </svg>
+          Ты научишься писать сочинения минимум на 10 баллов из 14.<span class="garantee-accent">
+          В то время как 20% учеников получили за сочинение 0.</span>
       </p>
+      </li>
+
+      <li class="garantee-item">
       <p class="garantee-description">
         <svg class="icon-fire" width="15px" height="20px" data-modal-close>
-          <use href="./images/sprite.svg#icon-fire"></use></svg
-        >Ты будешь заниматься в своем районе. Мы выберем место проведения
+          <use href="./images/sprite.svg#icon-fire"></use>
+        </svg >
+        Ты будешь заниматься в своем районе. Мы выберем место проведения
         занятий после формирования команд.
       </p>
+      </li>
+
+      <li class="garantee-item">
       <p class="garantee-description">
         <svg class="icon-fire" width="15px" height="20px" data-modal-close>
-          <use href="./images/sprite.svg#icon-fire"></use></svg
-        >Команды будут сформированы, исходя из начального уровня учеников. Мы
+          <use href="./images/sprite.svg#icon-fire"></use>
+          </svg>
+          Команды будут сформированы, исходя из начального уровня учеников. Мы
         учитываем особенности каждого ученика.
       </p>
-    </div>
+      </li>
+
+    </ul>
   </div>
 </section>
