--- a/src/sass/layout/_guarantee.scss
+++ b/src/sass/layout/_guarantee.scss
@@ -1,90 +1,84 @@
-@media screen and (max-width: 767px) {
-  .container.mobile {
-    padding-left: 0px;
-    padding-right: 0px;
-  }
+.container.mobile {
+  padding-left: 0px;
+  padding-right: 0px;
+}
 
-  .garantee-description {
-    position: relative;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 1.66;
-    color: var(--additional-text-color);
-    margin: 0;
-    text-align: left;
-    width: 245px;
-    margin-left: 33.5px;
+.garantee-description {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.66;
+  color: var(--additional-text-color);
 
-    &:not(:last-child) {
-      margin-bottom: 23px;
-    }
-  }
+  text-align: left;
+  width: 245px;
+  margin-left: 33.5px;
+}
+.garantee-item {
+  position: relative;
+}
 
-  .garantee-description:not(:last-child):before {
-    content: '';
-    display: block;
-    height: 68px;
-    border: 1px dashed var(--secondary-text-color);
-    position: absolute;
-    margin-left: -28px;
-    margin-top: 25px;
-  }
+.garantee-item:not(:last-child) {
+  margin-bottom: 23px;
+}
 
-  .garantee-block {
-    background-color: var(--secondary-bg-color);
-    width: 320px;
-    height: 425px;
-    padding: 30px 20px;
-    text-align: center;
-  }
+.garantee-item:not(:last-child)::before {
+  content: '';
+  display: block;
+  height: 68px;
+  border: 1px dashed var(--secondary-text-color);
+  position: absolute;
+  margin-left: 5px;
+  margin-top: 25px;
+}
 
-  .icon-fire {
-    position: absolute;
-    left: -33.5px;
+.garantee-block {
+  background-color: var(--secondary-bg-color);
+  width: 320px;
 
-    fill: var(--accent-color);
-  }
+  padding: 30px 20px;
+  text-align: center;
+}
 
-  .garantee-accent {
-    color: var(--accent-color);
-  }
-  .title-garantee {
-    font-weight: 800;
-    font-size: 26px;
-    line-height: 1.3;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--primary-text-color);
-    margin: 0;
-    margin-bottom: 32px;
-  }
+.icon-fire {
+  position: absolute;
+  left: -0.5px;
+
+  fill: var(--accent-color);
+}
+
+.garantee-accent {
+  color: var(--accent-color);
+}
+.title-garantee {
+  font-weight: 800;
+  font-size: 26px;
+  line-height: 1.3;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+
+  margin-bottom: 30px;
 }
 
 @media screen and (min-width: 768px) {
+  .garantee-item:not(:last-child) {
+    margin-bottom: 20px;
+  }
+
   .garantee-description {
     position: relative;
     font-family: Montserrat;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 1.66;
-    color: var(--additional-text-color);
-    margin: 0;
-    text-align: left;
+
     width: 520px;
     margin-left: 38px;
-
-    &:not(:last-child) {
-      margin-bottom: 20px;
-    }
   }
 
   .garantee-block {
+    margin: 0 auto;
     background-color: var(--secondary-bg-color);
     width: 688px;
-    height: 272px;
+
     padding: 30px 50px 30px 79px;
-    text-align: center;
   }
 
   .icon-fire {
@@ -98,25 +92,9 @@
     color: var(--accent-color);
   }
 
-  .garantee-description:not(:last-child):before {
+  .garantee-item:not(:last-child)::before {
     content: '';
-    display: block;
     height: 30px;
-    border: 1px dashed var(--secondary-text-color);
-    position: absolute;
-    margin-left: -32px;
-    margin-top: 25px;
-  }
-
-  .title-garantee {
-    font-weight: 800;
-    font-size: 26px;
-    line-height: 1.3;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--primary-text-color);
-    margin: 0;
-    margin-bottom: 30px;
   }
 }
 
@@ -138,19 +116,25 @@
       margin-bottom: 20px;
     }
   }
+  .garantee-item:not(:last-child)::before {
+    content: '';
+    height: 40px;
+    margin-left: 10px;
+    margin-top: 30px;
+  }
 
   .garantee-block {
     background-color: var(--secondary-bg-color);
     width: 1314px;
     height: 395px;
     padding: 50px 112px 30px 112px;
-    text-align: center;
   }
 
   .icon-fire {
     position: absolute;
     left: -50px;
-
+    width: 22px;
+    height: 30px;
     fill: var(--accent-color);
   }
 
@@ -167,13 +151,8 @@
     margin-top: 25px;
   }
   .title-garantee {
-    font-weight: 800;
     font-size: 46px;
-    line-height: 1.3;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--primary-text-color);
-    margin: 0;
+
     margin-bottom: 50px;
   }
 }
