--- a/src/sass/layout/_description.scss
+++ b/src/sass/layout/_description.scss
@@ -1,7 +1,6 @@
 section {
   margin-left: auto;
   margin-right: auto;
-  max-width: 480px;
 }
 @media screen and (min-width: 768px) {
   section {
@@ -19,7 +18,7 @@ section {
   background-color: #fff5f6;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: url(../images/how-its-made/mob-milk-background.png);
+  background-image: url(./images/how-its-made/mob-milk-background.png);
 }
 @media screen and (min-width: 768px) {
   .how-its-made {
@@ -32,7 +31,7 @@ section {
     padding: 125px 115px;
     background-repeat: no-repeat;
     background-position: 0 30%;
-    background-image: url(../images/how-its-made/desktop-milk-background.png);
+    background-image: url(./images/how-its-made/desktop-milk-background.png);
   }
 }
 
@@ -261,19 +260,19 @@ section {
 .fact-title1::before {
   width: 33px;
   height: 50px;
-  background-image: url(../images/icon/icon-bucket-milk.png);
+  background-image: url(./images/icon/icon-bucket-milk.png);
 }
 
 .fact-title2::before {
   width: 50px;
   height: 50px;
-  background-image: url(../images/icon/icon-bucket-apple.png);
+  background-image: url(./images/icon/icon-bucket-apple.png);
 }
 
 .fact-title3::before {
   width: 44px;
   height: 50px;
-  background-image: url(../images/icon/icon-heart.png);
+  background-image: url(./images/icon/icon-heart.png);
 }
 
 .fact-text {
