остальной текст под таблет и десктоп

--- a/src/sass/layouts/_manufacture.scss
+++ b/src/sass/layouts/_manufacture.scss
@@ -81,6 +81,14 @@
   margin-bottom: 37px;
   margin-left: (50px -20px);
   font-weight: 700;
+  @include for-size(tablet) {
+    font-size: 16px;
+    line-height: 1.312;
+  }
+  @include for-size(desktop) {
+    font-size: 16px;
+    line-height: 1.312;
+  }
   &::after {
     content: '';
     width: 5px;
@@ -105,6 +113,14 @@
 
   color: $titleTextColor;
   margin-bottom: 16px;
+  @include for-size(tablet) {
+    font-size: 48px;
+    line-height: 1.145;
+  }
+  @include for-size(desktop) {
+    font-size: 58px;
+    line-height: 1.137;
+  }
 }
 .list-manufacture-text {
   font-family: 'DM Sans' sans-serif;
@@ -115,6 +131,14 @@
   /* or 20px */
   color: $primaryTextColor;
   margin-bottom: 38px;
+  @include for-size(tablet) {
+    font-size: 14px;
+    line-height: 1.74;
+  }
+  @include for-size(desktop) {
+    font-size: 16px;
+    line-height: 1.76;
+  }
 }
 .list-manufacture {
   .item::before {
