fix dots-icon margin

--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -275,7 +275,7 @@
 .dots {
     display: flex;
     justify-content: center;
-    width: inherit;
+    // width: inherit;
     height: 6px;
     margin-bottom: 30px;
 
@@ -285,7 +285,7 @@
 }
 
 .dots-icon {
-    margin-right: 4px
+    margin:0px 4px 0px 0px;
 }
 
 
