--- a/src/sass/layout/_program-section.scss
+++ b/src/sass/layout/_program-section.scss
@@ -16,7 +16,7 @@
     color: var(--primary-white-color);
 }
 
-.program-section .title{
+.program-section .title:not(:last-child){
     margin-bottom: 43px;
     text-align: center;
 }
@@ -149,7 +149,7 @@
      }
 
     .choose-section{
-       top: 5102px;
+       top: 1563px;
 
        left:50%; 
        margin-left:-140px;
@@ -204,7 +204,7 @@
     }
 
 
-    .program-section .title{
+    .program-section .title:not(:last-child){
         margin-bottom: 52px;
         text-align: left;
        
@@ -219,7 +219,6 @@
 
        &::before{
             content: " ";
-            // display: inline-block;
             height: 705px;
             width: 1px;
             background:  #FFFFFF ;
@@ -247,7 +246,7 @@
    
     .choose-section{
        position: absolute;
-       top: 3556px;
+       top: 1152px;
 
        left:50%; 
        margin-left:-344px;
@@ -331,7 +330,7 @@
         line-height: 1.3;
     }
     
-    .program-section .title{
+    .program-section .title:not(:last-child){
         margin-bottom: 160px;
         text-align: left;
     }
@@ -391,9 +390,9 @@
 
     .choose-section{
        position: absolute;
-       top: 4130px;
+       top: 1038px;
 
-       z-index: 10;
+       z-index: 100;
        left:50%; 
        margin-left:-657px;
         
@@ -456,7 +455,7 @@
 
 //-------------------зображення наіждає на текст----------------------
 
-@media screen and (min-width: 1344px) and (max-width: 1596px){
+@media screen and (min-width: 1344px) and (max-width: 1598px){
     .section-program-picture{
         left: -116px;
     }
