--- a/src/sass/components/_section.scss
+++ b/src/sass/components/_section.scss
@@ -6,6 +6,14 @@
   text-align: center;
   text-transform: uppercase;
   color: $titleTextColor;
+  @include for-size(tablet) {
+    font-size: 48px;
+    line-height: 1.145;
+  }
+  @include for-size(desktop) {
+    font-size: 58px;
+    line-height: 1.137;
+  }
 }
 .subtitle {
   font-family: 'Titan One', cursive;
@@ -15,4 +23,12 @@
   text-align: center;
   text-transform: uppercase;
   color: $subtitleTextColor;
+  @include for-size(tablet) {
+    font-size: 26px;
+    line-height: 1.153;
+  }
+  @include for-size(desktop) {
+    font-size: 30px;
+    line-height: 1.133;
+  }
 }
