--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,63 +1,49 @@
 .hero__section {
-  position: relative;
+  // position: relative;
   // @media screen and (min-width: 1344px) {
   // background-image: url('../images/icons/icons-sprite.svg#iconVector-1');
-  // background-position: bottom;
-  // width: 100%;
-  // margin-top: 46px;
+  background-position: bottom;
+  // background-position: absolute;
+  width: 100%;
   padding-top: 50px;
-  padding-bottom: 54px;
+  padding-bottom: 77px;
+  background-repeat: no-repeat;
+
   // @media screen and (min-width: 768px) {
-  //   padding-top: 70px;
-  //   padding-bottom: 76px;
   // }
   // @media screen and (min-width: 1344px) {
-  //   // max-width: 100%;
   //   padding-bottom: 106px;
   // }
-  //  position: relative;
   // @media screen and (max-width: 767px) {
   // }
-  background-position: 0 0;
-  background-size: 100vw;
-  // background-repeat: no-repeat;
-  // -webkit-filter: drop-shadow(8px 8px 8px #000);
-  // filter: drop-shadow(8px 8px 8px #000);
-  background-image: url('../images/wave/wave-desc-min.png');
+  background-repeat: no-repeat;
+  background-image: url('../images/wave/wave-min.png');
   @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
-    background-image: url('../images/wave/wave-desc@2x-min.png');
-
-    background-image: url('../images/wave/wave-min.png');
-    @media screen and (min-device-pixel-ratio: 2),
-      screen and (min-resolution: 192dpi),
-      screen and (min-resolution: 2dppx) {
-      background-image: url('../images/wave/wave@2x-min.png');
-      // background-position: absolute;
-    }
+    background-image: url('../images/wave/wave@2x-min.png');
   }
   @media screen and (min-width: 768px) {
     padding-top: 70px;
-    padding-bottom: 76px;
+    padding-bottom: 114px;
     background-image: url('../images/wave/wave-tablet-min.png');
     @media screen and (min-device-pixel-ratio: 2),
       screen and (min-resolution: 192dpi),
       screen and (min-resolution: 2dppx) {
       background-image: url('../images/wave/wave-tablet@2x-min.png');
-      // }
     }
-    @media screen and (min-width: 1344px) {
-      padding-bottom: 106px;
-      background-image: url('../images/wave/wave-desc-min.png');
-      @media screen and (min-device-pixel-ratio: 2),
-        screen and (min-resolution: 192dpi),
-        screen and (min-resolution: 2dppx) {
-        background-image: url('../images/wave/wave-desc@2x-min.png');
-      }
+  }
+  @media screen and (min-width: 1344px) {
+    padding-bottom: 106px;
+    background-image: url('../images/wave/wave-desc-min.png');
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url('../images/wave/wave-desc@2x-min.png');
     }
   }
 }
+// }
 
 .hero.container {
   // margin-bottom: 77px;
@@ -179,7 +165,7 @@
   height: 177.5px;
   @media screen and (min-width: 768px) {
     margin-top: 13px;
-    // margin-right: -60px;
+    margin-right: -40px;
     width: 375.75px;
     height: 320.64px;
   }
