--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,6 @@ li {
 section {
   margin-left: auto;
   margin-right: auto;
-  max-width: 320px;
 }
 
 @media screen and (min-width: 768px) {
@@ -131,7 +130,7 @@ section {
   background-color: #fff5f6;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: url(../images/how-its-made/mob-milk-background.png);
+  background-image: url("../images/how-its-made/mob-milk-background.png");
 }
 
 @media screen and (min-width: 768px) {
@@ -146,7 +145,7 @@ section {
     padding: 125px 115px;
     background-repeat: no-repeat;
     background-position: 0 30%;
-    background-image: url(../images/how-its-made/desktop-milk-background.png);
+    background-image: url("../images/how-its-made/desktop-milk-background.png");
   }
 }
 
@@ -396,19 +395,19 @@ section {
 .fact-title1::before {
   width: 33px;
   height: 50px;
-  background-image: url(../images/svg/icon-bucket-milk.png);
+  background-image: url("../images/icon/icon-bucket-milk.png");
 }
 
 .fact-title2::before {
   width: 50px;
   height: 50px;
-  background-image: url(../images/svg/icon-bucket-apple.png);
+  background-image: url("../images/icon/icon-bucket-apple.png");
 }
 
 .fact-title3::before {
   width: 44px;
   height: 50px;
-  background-image: url(../images/svg/icon-heart.png);
+  background-image: url("../images/icon/icon-heart.png");
 }
 
 .fact-text {
