--- a/src/sass/layout/_problems.scss
+++ b/src/sass/layout/_problems.scss
@@ -8,7 +8,8 @@
     }            
     @media screen and (min-width:768px) {
     padding-top: 60px;
-    min-height: 340px;    
+    min-height: 340px;  
+    margin-bottom: 201px;  
     }
     @media screen and (min-width:1344px) {
     padding-top: 100px;    
