--- a/src/sass/layout/_registration.scss
+++ b/src/sass/layout/_registration.scss
@@ -75,15 +75,17 @@
     height: 48px;
     color: var(--primary-white-color);
     margin-bottom: 20px;
-   
+    
+    @media screen and(max-width:767px){
+      padding-left: 48px;
+     }   
     
     &::placeholder {
         font-weight: 600;
         font-size: 14px;
         line-height: 1.214;
         color: var(--primary-white-color);
-        letter-spacing: 0.08em;
-        padding-left: 28px;}
+        letter-spacing: 0.08em;}
       }
 
     .registration-button {
@@ -136,6 +138,7 @@
 
     .registration-form-input {
     width: 390px;
+    padding-left: 40px;
     }
     .registration-button {
       margin-top: 11px;
@@ -176,11 +179,11 @@
     width: 478px;
     height: 70px;
     margin-bottom: 30px;
+    padding-left: 40px;
 
     &::placeholder {
     font-size: 20px;
-    line-height: 1.2;
-    padding-left: 40px;}
+    line-height: 1.2;}
     }
 
     .registration-button {
