якоря для кнопок в герое и хэдэре

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -6,7 +6,7 @@
             <p class="hero__undertitle">Просто не будет.</p>
             <p class="hero__text">Но ты гарантировано наберешь <span class="hero__text--accent">+25 баллов</span>
             </p>
-            <button type="button" class="button button--hero">хочу на бесплатное занятие</button>
+            <button type="button" class="button button--hero"><a href="./index.html#call-me" class="link">хочу на бесплатное занятие</a></button>
         
         <div class="hero__img">
         </div>
