--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -33,7 +33,7 @@
 
 .hero__title {
   // animation: blur 0.75s ease-out 33;
-  // color: $black;
+  color: $black;
   @include font(800, 20px, 27px, inherit, 0.03em);
   &:hover {
     cursor: pointer;
